<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Helsinki Testbed Viewer 2.0</string>
    <string name="app_homepage" translatable="false">http://mvestola.github.io/helsinki-testbed2-android/</string>

    <string name="testbed_base_url" translatable="false">http://testbed.fmi.fi/history_browser.php?imgtype=%1$s&amp;t=%2$s&amp;n=%3$s</string>

    <string name="main_menu_refresh">Refresh</string>
    <string name="main_menu_reset_zoom">Reset zoom</string>
    <string name="main_menu_preferences">Settings</string>
    <string name="main_menu_about">About</string>

    <string name="about_title" translatable="false">Helsinki Testbed Viewer %1$s</string>
    <string name="about_text">Helsinki Testbed Viewer 2.0 is an application which shows weather maps
        from the Finnish Meteorological Institute (FMI) website <b>testbed.fmi.fi</b>.\n\nThis application is a private project and not developed by the FMI.
        All map images are downloaded from the Helsinki Testbed website which is copyrighted by the Helsinki Testbed project.\n\n
    </string>
    <string name="extra_license_text"><a href="https://mvestola.github.io/helsinki-testbed2-android/privacy-policy.html">Privacy policy</a></string>

    <string name="about_visit_website">Application website</string>

    <string name="close_button">Close</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="do_not_show_again">Do not show again</string>

    <string name="whats_new_title">New in version %1$s</string>
    <string name="whats_new_text">
        - Updated support libraries and target Android version to 8.1 Oreo (API level 27)\n\n
        - Added link to privacy policy\n\n
        - Dropped support for old Android versions. The minimum supported Android version is now 4.2 Jelly Bean (API level 17)
    </string>

    <string name="location_permission_title">Allowing to read current location</string>
    <string name="location_permission_text">Allowing the application to use your location helps you to see from the map e.g. if rain clouds are coming to your current location.\n\nIt is recommended to allow the application to use your location.</string>

    <string name="hardware_accel_dialog_title">Please disable force GPU setting</string>
    <string name="hardware_accel_dialog_text">
        You seem to have the setting "Force GPU rendering" on, which causes problems
        with this application. Please disable this setting from your device settings
        (Settings...Developer options...Force GPU rendering).
        Otherwise the current location and municipalities are not shown in the map.
    </string>

    <string name="notice_cancelled">Download cancelled</string>

    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_downloading">Downloading maps...</string>
    <string name="activity_label_anim">Maps</string>

    <string name="preference_category_basic">Basic settings</string>
    <string name="preference_category_advanced">Advanced settings</string>

    <string name="preference_category_animation">Animation settings</string>
    <string name="preference_category_location">Locations on map</string>
    <string name="preference_category_user_location">User\'s current location</string>
    <string name="preference_category_municipality_location">Municipalities on map</string>

    <string name="preference_time_step_title">Time-step</string>
    <string name="preference_time_step_summary">Time-step between map images</string>

    <string name="preference_number_of_images_title">Number of images</string>
    <string name="preference_number_of_images_summary">How many map images to download</string>

    <string name="preference_anim_frame_delay_title">Animation speed</string>
    <string name="preference_anim_frame_delay_summary">Delay between animation frames</string>

    <string name="preference_anim_autostart_title">Automatic animation</string>
    <string name="preference_anim_autostart_summary">Check this if you want the animation to start automatically</string>

    <string name="preference_location_user_title">Show your location</string>
    <string name="preference_location_user_summary">Check to show your current location on the map</string>

    <string name="preference_location_provider_title">Location provider</string>
    <string name="preference_location_provider_summary">Select your location provider.
        Currently selected: %1$s</string>
    <string name="preference_location_provider_gps">GPS</string>
    <string name="preference_location_provider_network">Network</string>
    <string name="preference_location_provider_fixed">Fixed location (%1$s)</string>
    <string name="preference_location_provider_fixed_error_dialog">No current location is available.
        Reverted to the GPS provider. Please wait until the current location is available and then choose the
        fixed option.</string>

    <string name="preference_map_marker_color_title">Map marker color</string>
    <string name="preference_map_marker_color_summary">Choose the background color of the marker showing your current location</string>
    <string name="preference_map_marker_color_default" translatable="false">#C8D94585</string>
    <string name="preference_map_marker_size_title">Map marker size</string>
    <string name="preference_map_marker_size_summary">Specify the height of the marker showing your current location</string>

    <string name="preference_map_point_color_title">Municipality color</string>
    <string name="preference_map_point_color_summary">Choose the background color of the point showing a municipality</string>
    <string name="preference_map_point_color_default" translatable="false">#C8FF8000</string>
    <string name="preference_map_point_size_title">Municipality point size</string>
    <string name="preference_map_point_size_summary">Specify the diameter of the point showing a municipality</string>

    <string name="preference_location_municipalities_title">Shown municipalities</string>
    <string name="preference_location_municipalities_summary">Choose which municipalities are shown on the map as dots</string>

    <string name="preference_screen_animation_summary">Change animation settings.</string>
    <string name="preference_screen_location_summary">Change settings related to showing the
        user\'s location and displaying municipalities on the map</string>

    <string name="preference_show_ads_title">Show ads</string>
    <string name="preference_show_ads_summary">Select to view advertisements. Ads are shown
    to support the development of this application.</string>

    <string name="progress_initializing">Initializing...</string>
    <string name="progress_parsing">Reading page from Testbed...</string>
    <string name="progress_downloading">Downloading latest weather map...</string>
    <string name="progress_done">Done</string>
    <string name="progress_anim_downloading">(Downloading: %1$d/%2$d)</string>

    <string name="error_message_detailed">Unexpected error occurred: %1$s</string>
    <string name="error_msg_map_image_could_not_download">Could not open map image. Please try again later.</string>
    <string name="error_msg_io_exception">Could not download map image. Please try again later.</string>
    <string name="error_msg_parsed_map_image_null">Could not process map image. Please try again later.</string>
    <string name="error_msg_http_status">Could not connect to the server (HTTP %1$s). Please try again later.</string>
    <string name="error_msg_http_error">Could not connect to the server. Please try again later.</string>
    <string name="error_msg_invalid_url">Invalid URL: %1$s</string>
    <string name="error_msg_parsing_timestamp">Could not parse image timestamps from HTML page.</string>
    <string name="error_msg_parsing_urls">Could not parse image URLs from HTML page.</string>
    <string name="error_msg_parsing_length">Could not parse images from HTML page.</string>
    <string name="error_msg_parsing_page">Could not read HTML page.</string>
    <string name="error_msg_parsing_page_changed">Could not parse HTML page. Webpage has changed its syntax. please report this error.</string>

    <string name="map_type_radar">Rain &amp; temperature</string>
    <string name="map_type_relativehumidity">Humidity</string>
    <string name="map_type_wind">Wind</string>
    <string name="map_type_pressure">Air pressure</string>
    <string name="map_type_dewpoint">Dew point</string>

    <!-- Color Picker dialog -->
    <string name="dialog_color_picker">Pick a color</string>

    <string name="button_content_description_playpause">Play/Pause</string>

    <string name="choose_map_type">Choose map type</string>

</resources>
