<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/preference_category_basic">

        <ListPreference
            android:defaultValue="15"
            android:key="PREF_MAP_TIME_STEP"
            android:summary="@string/preference_time_step_summary"
            android:title="@string/preference_time_step_title"
            android:entries="@array/map_time_step_options"
            android:entryValues="@array/map_time_step_values" />

        <ListPreference
            android:defaultValue="10"
            android:key="PREF_MAP_NUMBER_OF_IMAGES"
            android:summary="@string/preference_number_of_images_summary"
            android:title="@string/preference_number_of_images_title"
            android:entries="@array/map_number_of_images_options"
            android:entryValues="@array/map_number_of_images_values" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="PREF_SCREEN_ANIM"
        android:title="@string/preference_category_animation">

        <SeekBarPreference
            android:defaultValue="1000"
            android:key="PREF_ANIM_FRAME_DELAY_INT"
            android:min="100"
            android:max="3000"
            android:summary="@string/preference_anim_frame_delay_summary"
            android:title="@string/preference_anim_frame_delay_title"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREF_ANIM_AUTOSTART"
            android:summary="@string/preference_anim_autostart_summary"
            android:title="@string/preference_anim_autostart_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_category_user_location">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREF_LOCATION_SHOW_USER_LOCATION"
            android:summary="@string/preference_location_user_summary"
            android:title="@string/preference_location_user_title" />

        <ListPreference
            android:defaultValue="network"
            android:dependency="PREF_LOCATION_SHOW_USER_LOCATION"
            android:entries="@array/location_provider_options"
            android:entryValues="@array/location_provider_values"
            android:key="PREF_LOCATION_PROVIDER"
            android:summary="@string/preference_location_provider_summary"
            android:title="@string/preference_location_provider_title" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="0xC8D94585"
            android:dependency="PREF_LOCATION_SHOW_USER_LOCATION"
            android:key="PREF_LOCATION_MAP_MARKER_COLOR_HEX"
            android:summary="@string/preference_map_marker_color_summary"
            android:title="@string/preference_map_marker_color_title"
        />

        <SeekBarPreference
            android:defaultValue="25"
            android:dependency="PREF_LOCATION_SHOW_USER_LOCATION"
            android:key="PREF_LOCATION_MAP_MARKER_SIZE_DP_INT"
            android:min="10"
            android:max="100"
            android:summary="@string/preference_map_marker_size_summary"
            android:title="@string/preference_map_marker_size_title"
            />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_category_municipality_location">

        <MultiSelectListPreference
            android:enabled="true"
            android:key="PREF_LOCATION_MUNICIPALITIES_LIST"
            android:persistent="true"
            android:summary="@string/preference_location_municipalities_summary"
            android:title="@string/preference_location_municipalities_title" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="0xC8FF8000"
            android:key="PREF_LOCATION_MAP_POINT_COLOR_HEX"
            android:summary="@string/preference_map_point_color_summary"
            android:title="@string/preference_map_point_color_title"
            />

        <SeekBarPreference
            android:defaultValue="10"
            android:key="PREF_LOCATION_MAP_POINT_SIZE_DP_INT"
            android:min="5"
            android:max="50"
            android:summary="@string/preference_map_point_size_summary"
            android:title="@string/preference_map_point_size_title"
        />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_category_ads">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREF_SHOW_ADS"
            android:summary="@string/preference_show_ads_summary"
            android:title="@string/preference_show_ads_title" />

    </androidx.preference.PreferenceCategory>

</PreferenceScreen>
