<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_and_ad" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_rain_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/map_type_radar"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/map_type_wind"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/map_type_relativehumidity"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_air_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/map_type_pressure"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_dew_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/map_type_dewpoint"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
